feat: plug views (#29)
* wip: get started on plugin gui

* feat: statless view

* feat(core): viewspec validation

* feat(compose): FfiRuntimeState

* wip(daybook_compose): DaybookViewRenderer

* refactor(DocEditor): restructure and visual rework

* feat(DocEditor): collapsing blocks

* feat(DocEditor): sticky block menu

* feat(DocEditor): accessory bar

* fix: detekt

* fix: lints

* fix(DocEditor): minor regressions

* feat(DocEditor): selection

* wip: dayledger view

* wip(SettingsScreen): list + details

* wip(SettingsScreen): improve visuals

* feat(SettingsScreen): OCI plugin import

* fix(DocEditor): touch accessible details

* fix: address feedback

* fix: plug UI and CI secrets

* fix: bad secrets

* feat(daybook): sqlite txns

* fix: android build